# discord-search-mcp

./: README.md  flake.nix  pyproject.toml
run/: CLAUDE.md
src/discord-search-mcp/: __main__.py
src/discord_search_mcp/: __main__.py  client.py  mcp.py  server.py
